--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,13 +1,16 @@
 <ul class="links">
-  <li class="{% if page.url == "/" %} active {% endif %}"><a href="{{ "/" | absolute_url }}">Theme Home</a></li>
-  <li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="{{ "/about/" | absolute_url }}">About</a></li>
+  <!--<li class="{% if page.url == "/" %} active {% endif %}"><a href="{{ "/" | absolute_url }}">Theme Home</a></li>-->
+  <li class=""><a href="#Introduction">Introduction</a></li>
+  <li class=""><a href="#InternalStruct">Internal Structure Model</a></li>
+  <li class=""><a href="#BayesianInference">Bayesian Inference</a></li>
+  <li class=""><a href="{{ "/about/" | absolute_url }}">Results</a></li>
+  <!-- <li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="{{ "/about/" | absolute_url }}">About</a></li>
   <li class="{% if page.url contains '/blog/' %} active {% endif %}"><a href="{{ "/blog/" | absolute_url }}">Blog</a></li>
-  <li class="{% if page.url contains '/elements/' %} active {% endif %}"><a href="{{ "/elements/" | absolute_url }}">Elements Reference</a></li>
+  <li class="{% if page.url contains '/elements/' %} active {% endif %}"><a href="{{ "/elements/" | absolute_url }}">Elements Reference</a></li> -->
 </ul>
 
 <ul class="icons">
-  <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
-  <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-  <li><a href="https://instagram.com/{{site.instagram}}" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li>
-  <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
+  <li><a href="https://ui.adsabs.harvard.edu/search/q=orcid%3A0000-0003-1231-2389&sort=date+desc" class="ai ai-ads-square ai-2x" rel="nofollow" style="position: relative; top: 5px; border-bottom: none;"></a></li>
+  <li><a href="https://orcid.org/0000-0003-1231-2389" class="ai ai-orcid-square ai-2x" rel="nofollow" style="position: relative; top: 5px; border-bottom: none;"></a></li>
+  <li><a href="https://github.com/{{site.github}}" class="fa fa-github-square fa-2x" rel="nofollow" style="position: relative; top: 5px; border-bottom: none;"></a></li>
 </ul>
